# Seifenkiste_1

./: .gitignore  PC_make_all.sh  README.md  RPI_make_all.sh  make_current_project.sh
PC_cockpit/: CMakeLists.txt  PC_cockpit_main_process.cpp  PC_cockpit_test_process.cpp  start_PC_cockpit.sh  test_PC_cockpit.sh
PC_cockpit/dev_tests/stream_rpi_camera/: CMakeLists.txt  display.h  stream_rpi_camera (copy).cpp  stream_rpi_camera.cpp
PC_cockpit_1/: CMakeLists.txt
PC_cockpit_1/src/: PC_cockpit_1.c  PC_cockpit_1.cpp  tcp_server.cpp  tcp_server.h
PC_cockpit_1/src/common/: defs.cpp  message_class.cpp  message_class.h  message_queue.cpp  message_queue.h
PC_cockpit_1/src/tcp_reader/: tcp_reader.cpp  tcp_server.cpp  tcp_server.h
RPI_cockpit/: CMakeLists.txt  RPI_cockpit_main_process.cpp  gmon.out  start_RPI_cockpit.sh
RPI_cockpit/copyfrompc/: CMakeLists.txt  PC_cockpit_main_process.cpp  PC_cockpit_test_process.cpp  kill_rogue_processes.sh  start_PC_cockpit.sh
RPI_cockpit_1/: CMakeLists.txt  CMakeLists_all.txt  tcp_client.cpp  tcp_client_rpi.c
RPI_cockpit_1/dev_tests/: camera_tcp_test.cpp
RPI_cockpit_1/src/: tcp_client_test.cpp  tcp_client_test_timer_messages.cpp
RPI_cockpit_1/src/tcp_client/: tcp_client.cpp  tcp_client.h
RPI_cockpit_1/tcp_client/: tcp_client.cpp  tcp_client.h
common/: defs.cpp  defs.h  message_class.cpp  message_class.h  message_queue.cpp  message_queue.h
documentation/: design_overview.odp  message_queue.odp  messageclassreadme.txt  messaging_0_1.mm  project_structure_dir_cmake_test_etc.odp  (+3 more)
kickstarters/: CMakeLists.txt
kickstarters/buffer/buffer_1/: CMakeLists.txt  README.TXT  buffer_class_test.cpp  bufferbaseclass.cpp  bufferbaseclass.h  databufferclass.cpp  databufferclass.h  headerbufferclass.cpp  headerbufferclass.h
kickstarters/c_basics/json/: json.cpp  test.json
kickstarters/c_basics/move_semantics/: 1_move_semantics.cpp
kickstarters/c_basics/streamoverload/: overload.cpp
kickstarters/cmake/cmake_install/: CMakeLists.txt  readme.txt
kickstarters/cmake/cmake_install/common_1/: test1.cpp  test1.h  unit_test_mylib1.cpp
kickstarters/cmake/cmake_install/common_2/: test2.cpp  test2.h  unit_test_mylib2.cpp
kickstarters/cmake/cmake_install/common_main/: decinc.cpp
kickstarters/cmake/cmake_install/lib_run/: decinc  unit_test_mylib1  unit_test_mylib2
kickstarters/cmake/v1/: CMakeLists.txt  README.txt
kickstarters/cmake/v1/common/: CMakeLists.txt  test_hello_lib.cpp
kickstarters/cmake/v1/run/: test_hello  test_hello_lib
kickstarters/cmake/v2/: CMakeLists.txt  test.cpp
kickstarters/cmake/v2/common/: hello_lib.cpp  hello_lib.h
kickstarters/cmake/v2/run/: hello_unit_test  test_hello  test_hello_lib
kickstarters/error_handling/: .~lock.errorhandling.odt#  errorhandling.odt
kickstarters/error_handling/1_try_option_construct/: CMakeLists.txt  option_class.h  test_option_class.cpp
kickstarters/error_handling/2_basic_error_class/: CMakeLists.txt  error_class.cpp  test_error_class.cpp
kickstarters/error_handling/3_try_tuples/: CMakeLists.txt  test_error_class.cpp
kickstarters/error_handling/4_start_combining_1_2_3/: CMakeLists.txt  error_class (copy).h  option.h  return_type_class.h  tcp_error_defs.h  test_error_class.cpp
kickstarters/messaging_framework/1_basic/: CMakeLists.txt  framework.cpp  message_class.cpp  message_class.h  message_queue_class.cpp  message_queue_class.h  readme.txt  tcp_class.cpp  tcp_class.h
kickstarters/messaging_framework/2_message_ptr/: CMakeLists.txt  framework.cpp  message_class.cpp  message_class.h  message_queue_class.cpp  message_queue_class.h  readme.txt  tcp_class.cpp  tcp_class.h
kickstarters/messaging_framework/3_communication/: CMakeLists.txt  process_communication_class.cpp  process_communication_class.h  process_test.cpp
kickstarters/tcp/: CMakeLists.txt  README.TXT
kickstarters/tcp/tcp_class1/: 1_send_message.cpp  CMakeLists.txt  README.txt  tcp_class.cpp  tcp_class.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
kickstarters/tcp/tcp_class2/: 2_send_N_messages.cpp  CMakeLists.txt  README.txt  defs.cpp  defs.h  tcp_class.cpp  tcp_class.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
kickstarters/tcp/tcp_class2/buffer_class/: CMakeLists.txt  buffer_base_class.h  buffer_class.cpp  buffer_class.h  buffer_class_test.cpp  data_buffer_class.cpp  data_buffer_class.h  header_buffer_class.cpp  header_buffer_class.h
kickstarters/tcp/tcp_class2/buffer_class/previous/: buffer_class (copy).cpp  buffer_class (copy).h
kickstarters/tcp/tcp_class2/message_class/: CMakeLists.txt  message_class.cpp  message_class.h  message_class_test.cpp
kickstarters/threads/: 1_concurrent_access.cpp  2_concurrent_access_class_mutex.cpp  3_concurrent_access_queue.cpp  CMakeLists.txt  concurrent_access.cpp  threads.cpp
kickstarters/timers/: complex_timer.cpp  simple_timer.cpp  timer_read_info.cpp
lib/: CMakeLists.txt  defs.cpp  defs.h  message_class.cpp  message_class.h  message_queue.cpp  message_queue.h
lib/cockpit_class/: cockpit_class.cpp  cockpit_class.h  test_cockpit_class.cpp
lib/common/: common.cpp  common.h  return_type_class.h  test_common_stuff.cpp  test_option_class.cpp
lib/message_class/: address_class.cpp  address_class.h  buffer_and_address_class_unit_test.cpp  buffer_class.cpp  buffer_class.h  message_class.cpp  message_class.h  test_message_class.cpp
lib/message_queue_class/: message_queue_class.cpp  message_queue_class.h  process_communication_class.cpp  process_communication_class.h  test_message_queue_class.cpp
lib/old_cmakes/: CMakeLists.txt  CMakeLists_cockpit.txt  CMakeLists_common.txt  CMakeLists_message_queue.txt  CMakeLists_tcp.txt  message_class_CMakeLists.txt
lib/pc_lib/: tcp_server.cpp  tcp_server.h
lib/sensor_class/: sensor_base_class.cpp  sensor_base_class.h  sensor_camera_class.cpp  sensor_camera_class.h  test_sensor_camera.cpp
lib/tcp_class/: tcp_class.cpp  tcp_class.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_state_defs.h  test_remote_tcp_connection.cpp  test_tcp_class.cpp
(+5 files in other folders)
